# 2025_data_biz_hackathon

./: .gitignore  Dockerfile  README.md  lime_explanation_70th_sample0.html  pyproject.toml  requirements.txt
notebooks/: base_notebook.ipynb  create_raw_y_before_square_counts.ipynb  data_preparation_and_fe.ipynb  feature_importance.ipynb  features_generation.ipynb  features_generation_surrounding_areas.ipynb  modeling.ipynb  training.ipynb
notebooks/EDA/: Data_exploration.ipynb  merchants_report.html  transactions_report.html  users_report.html
src/: main.py
src/data_preparation/: read_data.py
src/feature_engineering/: geo_features.py  time_features.py
src/modelling/: quantile_models.py
src/utilities/: path_utilities.py
