[project]
name = "recruitment-2025-data-biz-hackathon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "adrianhajdukiewicz1", email = "adu.hajdukiewicz@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recruitment_2025_data_biz_hackathon"]
