[project]
name = "recruitment-2025-data-biz-hackathon"
version = "0.1.0"
description = "OOH Delivery Infrastructure Analysis in Poland"
authors = [
    { name = "adrianhajdukiewicz1", email = "adu.hajdukiewicz@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "reverse-geocoder>=1.5.1",
    "pycountry>=24.6.1",
    "xgboost>=3.0.1",
    "scikit-learn>=1.6.1",
    "imbalanced-learn>=0.13.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "optuna>=4.3.0",
    "geopandas>=0.13.0",
    "folium>=0.14.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "geopy>=2.4.0",
    "shapely>=2.0.0",
    "osmnx>=1.6.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recruitment_2025_data_biz_hackathon"]
